Skip to content
New issue

Have a question about this project? Sign up for a free GitHub account to open an issue and contact its maintainers and the community.

By clicking “Sign up for GitHub”, you agree to our terms of service and privacy statement. We’ll occasionally send you account related emails.

Already on GitHub? Sign in to your account

[SR-4867] func foo() {}; foo(_:) // Use of unresolved identifier 'foo' #47444

Open
bitjammer opened this issue May 11, 2017 · 1 comment
Open
Assignees
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself

Comments

@bitjammer
Copy link
Member

Previous ID SR-4867
Radar None
Original Reporter @bitjammer
Type Bug
Additional Detail from JIRA
Votes 0
Component/s Compiler
Labels Bug
Assignee @harlanhaskins
Priority Medium

md5: 2810c5dc45587fabbfced4fe2d6cd752

relates to:

  • SR-3254 Unhelpful diagnostics for compound name reference.

Issue Description:

func foo() {}
foo(_:)

error: use of unresolved identifier 'foo'
note: did you mean 'foo'?

This is a poor diagnostic, particularly since this is valid:

func foo(_: () -> ()) {}
foo(_:) {}
@belkadan
Copy link
Contributor

Very strange.

@swift-ci swift-ci transferred this issue from apple/swift-issues Apr 25, 2022
Sign up for free to join this conversation on GitHub. Already have an account? Sign in to comment
Labels
bug A deviation from expected or documented behavior. Also: expected but undesirable behavior. compiler The Swift compiler in itself
Projects
None yet
Development

No branches or pull requests

2 participants