Provide full DeclName in typo corrections

This fixes an ambiguity when using a fully-qualified reference to a
function decl:

func foo() {}
foo(_:)

The diagnostic will now print "use of unresolved identifier 'foo(_:)'".

https://bugs.swift.org/projects/SR/issues/SR-4867